styles/globals.css
@font-face {
  font-family: "HipHopper";
  src: url("../public/fonts/hip_hopper/hip_hopper/@font-face/e28d4e9297e3db1aea3d3142a1e9abe3.woff2")
      format("woff2"),
    url("../public/fonts/hip_hopper/hip_hopper/@font-face/e28d4e9297e3db1aea3d3142a1e9abe3.woff")
      format("woff"),
    url("../public/fonts/hip_hopper/hip_hopper/@font-face/e28d4e9297e3db1aea3d3142a1e9abe3.ttf")
      format("truetype");
}

:root {
  --main-color: black;
  --drama-pink: #e83e97;
  --drama-green: #33a985;
  --drama-yellow: #fabe12;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: "HipHopper", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-image: url("../public/images/background.svg");
  background-color: rgba(255, 255, 255, 0.7);
  background-blend-mode: color;
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
}

a {
  color: inherit;
  text-decoration: underline;
  display: inline;
  transition: .4s;
}

@media (hover:hover) {
  a:hover {
    color: var(--drama-pink);
  }
}

* {
  box-sizing: border-box;
}

button {
  cursor: pointer;
  border: none;
  background-color: var(--drama-green);
  color: var(--drama-yellow);
  font-family: "HipHopper";
  font-size: 18px;
  transition: 0.4s;
  padding: 10px 20px;
}

@media (hover: hover) {
  button:hover {
    background-color: var(--drama-yellow);
    color: var(--drama-pink);
  }
}

ul {
  list-style-type: '> ';
  margin-left: 0;
  padding-left: 12px;
  text-align: left;
}

ol {
  margin-left: 0;
  padding-left: 12px;
  text-align: left;
}

input, textarea {
  border: 2px solid var(--drama-green);
}

input:focus, textarea:focus {
  border: 2px solid #00000000;
  outline: 2px solid var(--drama-pink);
}

textarea {
  min-height: 160px;
}

input[type="submit"] {
  width: 100%;
  padding: 10px 0;
  margin: 20px 0 10px 0;
  background-color: var(--drama-green);
  color: var(--drama-yellow);
  cursor: pointer;
  border: none;
  border-radius: 0;
  font-family: inherit;
  font-size: 18px;
  transition: .4s;
  -webkit-appearance: none;
}

@media (hover:hover) {
  input[type="submit"]:hover {
    color: var(--drama-pink);
    background-color: var(--drama-yellow);
  }
}

input[type="checkbox"] {
  width: 30px;
  height: 30px;
}

input[type="checkbox"]:checked {
  background-color: var(--drama-pink);
}

.fade-in {
  animation: fadeIn ease .8s;
  -webkit-animation: fadeIn ease .8s;
  -moz-animation: fadeIn ease .8s;
  -o-animation: fadeIn ease .8s;
  -ms-animation: fadeIn ease .8s;
}
@keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}
  
@-moz-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}
  
@-webkit-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}
  
@-o-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}
  
@-ms-keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

